# Agora-TEN-Agent

agents/: property.json
agents/addon/extension/agora_rtc/: manifest.json
agents/addon/extension/py_init_extension_cpp/: BUILD.gn  manifest.json
agents/addon/extension/py_init_extension_cpp/.rte/package_info/: installed_paths.json
agents/addon/extension/py_init_extension_cpp/src/: main.cc
agents/addon/extension_group/default_extension_group/: manifest.json
agents/addon/system/rte_runtime/: manifest.json
agents/addon/system/rte_runtime/.rte/package_info/: installed_paths.json
agents/addon/system/rte_runtime_go/: manifest.json
agents/addon/system/rte_runtime_python/: manifest.json
agents/addon/system/rte_runtime_python/.rte/package_info/: installed_paths.json
agents/ten_packages/extension/http_server_python/: http_server_extension.py  manifest.json  property.json
agents/ten_packages/extension/hyh_keyword_detector/: BUILD.gn  README.md  __init__.py  addon.py  detector.py  log.py  manifest.json
agents/ten_packages/extension/openai_chatgpt_python/: openai.py  openai_chatgpt.py  openai_chatgpt_extension.py
agents/ten_packages/extension/openai_v2v_python/: conf.py  extension.py  manifest.json
playground/src/app/api/agents/start/: graph.tsx
server/internal/: http_server.go
